[package]
name = "oxy_pure"
version = "0.1.0"
authors = ["oreganoli <3611916+oreganoli@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
imap = "1.0.2"
iron = "0.6.1"
router = "0.6.0"
ramhorns = "0.5.0"
log = "0.4.8"
mime = "0.3.16"
pretty_env_logger = "0.3.1"
native-tls = "0.2.3"
rustyknife = "0.2.7"
lazy_static = "1.4.0"